<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Creu Roja</string>
    <string name="menu_locate">Posición</string>
    <string name="menu_refresh">Actualizar</string>
    <string name="menu_show_panel">Leyenda</string>
    <string name="menu_show_map">Mapa</string>
    <string name="menu_search">Buscar</string>
    <string name="search_hint">Busca un puesto</string>
    <string name="google_maps_api_key">"AIzaSyD4HzvaUA32b9neC1EcXbAnH5ZBD8OmSSQ"</string>
    <string name="google_maps_api_key_zuhause">"AIzaSyC_eeaFAw7-u9ha7njs7YPI-gvM3Pmil74"</string>
    <string name="map_style_normal">Mapa</string>
    <string name="map_style_terrain">Terreno</string>
    <string name="map_style_satellite">Satélite</string>
    <string name="map_style_hybrid">Híbrido</string>
    <string name="locating">Localizando posicion, espere un momento y vuelva a intentarlo.</string>
    <string name="marker_type_asamblea">Asamblea</string>
    <string name="marker_type_cuap">CUAP</string>
    <string name="marker_type_embarcacion">Embarcación</string>
    <string name="marker_type_bravo">Bravo</string>
    <string name="marker_type_hospital">Hospital</string>
    <string name="marker_type_preventivo">Preventivo</string>
    <string name="location_disabled_title">Servicios de localización desactivados</string>
    <string name="location_disabled_message">¿Desea activar los servicios de localización ahora?
    </string>
    <string name="location_unavailable">Los servicios de localizacion no se pudieron activar
    </string>
    <string name="open_location_settings">Ajustes</string>
    <string name="cancel">Cancelar</string>
    <string name="login_progress_signing_in">Validando datos en el servidor...</string>

    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="validate">Validar</string>

    <string-array name="map_styles">
        <item>@string/map_style_normal</item>
        <item>@string/map_style_hybrid</item>
        <item>@string/map_style_terrain</item>
        <item>@string/map_style_satellite</item>
    </string-array>
    <string-array name="marker_types">
        <item>@string/marker_type_asamblea</item>
        <item>@string/marker_type_cuap</item>
        <item>@string/marker_type_embarcacion</item>
        <item>@string/marker_type_bravo</item>
        <item>@string/marker_type_hospital</item>
    </string-array>

</resources>