<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_locate"
        android:icon="@drawable/ic_action_locate"
        android:showAsAction="ifRoom"
        android:title="@string/menu_locate"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_show_panel"
        android:title="@string/menu_show_panel"/>
    <item android:title="@string/menu_show_map">
        <menu>
            <item
                android:id="@+id/menu_show_normal"
                android:title="@string/map_style_normal"/>
            <item
                android:id="@+id/menu_show_satellite"
                android:title="@string/map_style_satellite"/>
            <item
                android:id="@+id/menu_show_terrain"
                android:title="@string/map_style_terrain"/>
            <item
                android:id="@+id/menu_show_hybrid"
                android:title="@string/map_style_hybrid"/>
        </menu>
    </item>
</menu>