<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@android:color/background_light"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!-- Login progress -->

    <LinearLayout
            android:id="@+id/login_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

        <TextView
                android:id="@+id/login_status_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/login_progress_signing_in"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <!--Login form -->
    <LinearLayout
            android:id="@+id/login_form"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:src="@drawable/logologin"/>

        <EditText
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:id="@+id/username"
                android:ems="10"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:layout_gravity="center_horizontal"
                android:nextFocusDown="@+id/password"
                android:imeOptions="actionNext"
                android:textColor="@android:color/black"/>

        <EditText
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:maxLines="1"
                android:layout_gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:nextFocusUp="@id/username"
                android:imeOptions="actionGo"/>
        <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validate"
                android:background="@android:color/darker_gray"
                android:textColor="@android:color/black"
                android:padding="8dp"
                android:layout_marginRight="16dp"
                android:layout_gravity="right"/>
    </LinearLayout>
</LinearLayout>